2012-12-17 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringEncoding.c: Add local function to converted from
	UTF-16 to/from UTF-8.
	* Source/CFString.c: Modify functions for getting characters.
	* Source/NSCFError.m:
	* Source/NSCFData.m: Include NSString.h to avoid compiler warning.

2012-12-12 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/config.h.in:
	* configure:
	* configure.ac: Add test for endianess and size of void *.
	* Source/GSPrivate.h: Use result of endianess test.

2012-11-11 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.c:
	* Source/NSCFType.m:
	* Source/NSCFString.m: Apply modified version of Lubos Dolezel's
	patch.
	* Tests/CFString/objc_bridge.m: Tests for toll-free bridge.

2012-10-12 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFSocket.c: Implement CopyAddress functions.

2012-10-09 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFSocket.h: Use winsock on Windows.
	* Source/CFSocket.c: Implement Create and Address functions.

2012-09-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFSocket.h: Use winsock on Windows.
	* Source/CFSocket.c: Implement Create and Address functions.

2012-09-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSCFType.m: Call the CoreBase initialization code before
	trying to initialize the bridged classes.

2012-09-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CoreFoundation.h:
	* Headers/CoreFoundation/CFSocket.h:
	* Source/GNUmakefile.in:
	* Source/CFSocket.c: Add CFSocket skeleton.

2012-09-03 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRunLoop.c: Implement add, remove and search functions.

2012-08-30 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRunLoop.h: Add missing bits.
	* Source/CFString.c: Initialize CFRunLooop contant strings.
	* Source/CFRunLoop.c: Implement create functions.

2012-08-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSPrivate.h: